# adhd_ds

./: .gitignore  .v07_cleanup_anchor  .v07_trigger  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: apply-v08-patches.yml  ci.yml  materialize-v07.yml
.v07_parts/: 00  01  02  03  04  05  06  07_00  07_01  07_02  07_03  08_00  08_01  08_02  08_03  09_00  09_01  09_02  09_03  10_00  10_01
.v08_patch/: changelog.patch  ci.patch  orchestrator.patch  readme.patch
config/: data_contracts.yaml  ds_questions.yaml  evidence_policy.yaml  evidence_registry.yaml  external_data_registry.yaml  operations.yaml  resilience.yaml  scenarios.yaml  synthetic_data.yaml
config/ds_questions/: 01_data_and_metrics.yaml  02_patient_pathway.yaml  03_appointment_and_model.yaml  (+10 more)
docs/: .control-tower-v04  .v05-branch-ready  .v06-ready  control_tower_runbook.md  dashboard_guide.md  data_contracts.md  decision_register.md  decision_workflow.md  ds_scenario_playbook.md  evidence_methodology.md  experiment_plan.md  governance_notes.md  impact_assumptions.md  incident_response.md  metric_dictionary.md  model_promotion_policy.md  queue_policy.md  resilience_incident_runbook.md  role_access_matrix.md  service_api.md
sql/: README.md  real_world_diagnostics.sql  warehouse_examples.sql
tableau/: dashboard_spec.md
tests/: conftest.py  test_attendance.py  test_audit.py  test_contracts.py  test_control_tower.py  test_dashboard.py  test_diagnostics.py  test_evidence.py  test_experimentation.py  test_impact.py  test_monitoring.py  test_operations.py  test_optimisation.py  test_pathway.py  test_pipeline.py  test_project.py  test_question_casebook.py  test_queue_policy.py  test_resilience.py  test_service.py  test_synthetic.py  test_validation.py
(+74 files in other folders)
