[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhd-ds"
version = "0.2.0"
description = "Synthetic ADHD service data science and operations dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "plotly>=5.18",
  "PyYAML>=6.0",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
adhd-ds = "adhd_ops.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adhd_ops = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
