[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhd-ds"
version = "0.5.0"
description = "Synthetic ADHD service data science and operations dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "plotly>=5.18",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "fastapi>=0.115"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27", "uvicorn>=0.30"]
api = ["uvicorn>=0.30"]

[project.scripts]
adhd-ds = "adhd_ops.orchestrator:main"
adhd-ds-api = "adhd_ops.service:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.package-data]
adhd_ops = ["assets/*.html", "assets/*.css", "assets/*.js"]
